2018-09-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dpxutil.[ch], dvi.[ch], dvipdfmx.c, pdfdoc.[ch], pdfencrypt.[ch],
	pdffont.[ch], xbb.c: Remove duplicated code. Reorganize
	initialization process. Use struct for passing options.
	* configure.ac: Version 20180916.

2018-09-14  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* agl.[ch], bmpimage.c, cid.[ch], cidtype0.[ch], cidtype2.[ch],
	cmap.[ch], cmap_read.c, dpxconf.[ch], dpxfile.[ch], dvi.[ch],
	dvipdfmx.[ch], epdf.c, fontmap.[ch], jp2image.c, jpegimage.c,
	mpost.[ch], pdfcolor.[ch], pdfdev.[ch], pdfdoc.[ch], pdfdraw.c,
	pdfencoding.[ch], pdfencrypt.[ch], pdffont.[ch], pdfobj.[ch],
	pdfximage.[ch], pngimage.c, spc_pdfm.c, spc_util.[ch],
	specials.[ch], subfont.[ch], t1_char.c, tfm.[ch], truetype.c,
	tt_aux.[ch], tt_cmap.[ch], tt_gsub.[ch], type0.[ch], type1.c,
	type1c.c, vf.[ch], xbb.c: Cleanup. Remove duplicated code.
	Reorganize global variables.
	* configure.ac: Version 20180914.

2018-09-09  Karl Berry  <karl@tug.org>

	* xdvipfm-bb.test: LC_ALL=LANGUAGE=C.

2018-09-06  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfencoding.c: Reverted change made for 20071115.
	ToUnicode creation for simple font was broken. Not working
	as intended at all.
	* pdfdoc.c, epdf.c, pdffont.c: Rearranged code.
	* pdfobj.c: Added some debugging code.
	* configure.ac: Version 20180906.

2018-09-04  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c: More fix on circular reference issue.
	* configure.ac: Version 20180904.

2018-09-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.c: Experimental support for XeTeX transparency font feature.
	* cid.c, cid_p.h, cidtype0.c, cmap.[ch], cmap_p.h, fontmap.[ch],
	pdfdev.c, pdffont.c, tt_cmap.[ch], type0.c:
	Removed reverse CMap mappings. Do not use cff charset data
	directly in pdfdev. Using reverse CMap for ToUnicode creation
	causes problems since input CMap can not be assumed to be
	always Unicode. Also, current implementation is imcomplete.